--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
+    "korean-lunar-calendar": "^0.3.6",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
